[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
anchor-spl = "0.32.0"
bytemuck = { version = "1.20.0", features = ["min_const_generics"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
