[package]
name = "meteora-damm-v2-cpi"
version = "0.1.0"
description = "CPI wrapper for Meteora DAMM v2 program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "meteora_damm_v2_cpi"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
bytemuck = { workspace = true }
