[package]
name = "token-vault-practice"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_vault_practice"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.32.1" }
anchor-spl = { version = "0.32.1" }
# Pin blake3 to 1.8.2 to avoid edition2024 requirement in 1.8.3
blake3 = "=1.8.2"